--- a/views/success.pug
+++ b/views/success.pug
@@ -1,21 +1,24 @@
 extends layout
+include mixins/_navbar.pug
+include mixins/_secondmenu.pug 
 
 block content
-    navbar.navheader 
-        .logotext
-            a.logo(href='/') <span>Sportek</span> 
-            h1.logo_job jobs
-            a(href='/') 
-        ul.main-nav 
-            li.twitter
-                a.twitter-follow-button(href='https://twitter.com/sportekjobs', data-show-count='false') Follow @teacherjobs_io
-            
-            li.join 
-                a.button(href='/remote-jobs') Remote Jobs 
-            li.join 
-                a.button(href='https://t.me/joinchat/A9hsRBDuvCUuCe_U0othnw') Community
-            li.join 
-                a.button(href='/companies') Companies
+  //- +_navbar 
+        //- a(href='https://toomai.typeform.com/to/VnpRAv' target='_blank').button Post a Job
+        //- a.typeform-share.button(href='https://toomai.typeform.com/to/VnpRAv', data-mode='drawer_right', target='_blank') Post a Job
+  div.header 
+    div.textbox
+      +_navbar 
+      div.title
+        h1 <strong>Be part of the sports revolution.</strong>
+        h2 Find tech and startup jobs in sports.
+       
+    //- div.animation
+    //-   .headerimage
+    
+  div.jobpostvr
+  
+    .content
     
     section.jobinformation 
         div.textbox__left
@@ -23,3 +26,4 @@ block content
             p It should be listed soon on our website. If you running into troubles please send me a message on Twitter or send me an Email.
             a.button(href='https://twitter.com/toomaime') Twitter
             a.button(href='hi@toomai.me') Email
+            a.button(href="/") See my job
