--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1119,7 +1119,7 @@ td {
 .explainer__box{
   display: flex;
   flex-direction: column;
-  
+  align-items: center;
   /* border: 1px solid #ededed; */
   border-radius: 5px;
   padding: 7px;
