--- a/views/admin.pug
+++ b/views/admin.pug
@@ -87,7 +87,7 @@ block content
                       option(value='Other') Other
                     div.description
                       label Company Description
-                      textarea(rows='4', cols='50', id='editor1' name='copmanydescription') Enter text here...
+                      textarea(rows='4', cols='50', id='editor1' name='companydescription') Enter text here...
                       label Job Description
                       textarea(rows='4', cols='50', id='editor2' name='description') Enter text here...
                     //- .image-upload
