--- a/views/companyInfo.pug
+++ b/views/companyInfo.pug
@@ -17,7 +17,7 @@ block content
           p= post.companydescription
         .companylinks
           p &#x1F4CD #{post.location}
-          a(href=post['companylink']) &#x1F310 Company Website
+          a(href=post['companylink'] target="_blank") &#x1F310 Company Website
         
       div.jobcontainer
         h1 Latest Job at #{post.company}
