--- a/views/hire.pug
+++ b/views/hire.pug
@@ -99,7 +99,7 @@ block content
                     label Website of the company
                     input(type='text' name='companylink')
                     label Apply Url or Email
-                    input(type='text' name='link')
+                    input(type='text' name='link' placeholder='mailto:careers@companyemail.com or link to job')
                     //- label Company Email for sending your the bill
                     //- input(type='text' name='email')
                     input#checkbox(type='checkbox', name='paid', value='false', checked='')
