--- a/views/jobInfo.pug
+++ b/views/jobInfo.pug
@@ -1,8 +1,8 @@
 extends layout
 include mixins/_navbar.pug
 include mixins/_secondmenu.pug
-block head
-  title Sportstech job as #{data.position}
+//- block head
+//-   title Sportstech job as #{data.position}
 block content
   div.header 
     div.textbox
