--- a/views/jobInfo.pug
+++ b/views/jobInfo.pug
@@ -1,3 +1,7 @@
+doctype html
+html(lang='en')
+  head
+    title #{data.title}
 extends layout
 include mixins/_navbar.pug
 include mixins/_secondmenu.pug
