--- a/views/layout.pug
+++ b/views/layout.pug
@@ -47,5 +47,6 @@ html(lang='en')
       }(document, 'script', 'facebook-jssdk'));
     //twitter
     script(async='', src='https://platform.twitter.com/widgets.js', charset='utf-8')
+    block seoHeader
   body
     block content
