--- a/views/jobInfo.pug
+++ b/views/jobInfo.pug
@@ -1,6 +1,6 @@
 extends layout
 block seoHeader
-  title Sportstech job as #{data.position}
+  title Sportstech job as #{data[0].position}
 
 include mixins/_navbar.pug
 include mixins/_secondmenu.pug
