--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,7 +9,7 @@ html(lang='en')
     meta(property='og:title' content='A jobboard for tech and startup jobs in the sports industry to find jobs as Sports Analyst, Web Developer, Data Scientist, Designer, Product Manager, Business Developer, Sales and Marketing Manager.')
     meta(property='og:description' content='We are building the #1 job board for the sports industry to find and post tech and startup jobs as Sports Analyst, Web Developer, Data Scientist, Designer, Product Manager, Business Developer, Sales and Marketing Manager.')
     meta(property='og:image' content='https://sportekjobs.com/images/smimage.png')
-
+    meta(name='keywords' content='sports jobs, sports internships, sports emplyoment, sports careers, sportstech jobs, startup jobs, developer jobs')
     meta(name='twitter:card' content='summary')
     meta(name='twitter:site' content='@sportekjobs')
     meta(name='twitter:title' content='Sportekjobs')
