--- a/views/index.pug
+++ b/views/index.pug
@@ -10,8 +10,8 @@ block content
     div.textbox
       +_navbar 
       div.title
-        h1 <strong>Be part of the sports revolution.</strong>
-        h2 Find tech and startup jobs in sports.
+        h1 <strong>Find your next job in the SportsTech Industry.</strong>
+        h2 Find and list tech and startup jobs in Sports.
        
     //- div.animation
     //-   .headerimage
