--- a/views/sportsanalytics.pug
+++ b/views/sportsanalytics.pug
@@ -7,8 +7,8 @@ block content
     div.textbox
       +_navbar 
       div.title
-        h1 <strong>Be part of the sports revolution.</strong>
-        h2 Find tech and startup jobs in sports.     
+        h1 <strong>Start your career in sports analytics.</strong>
+        h2 Find a jobs in the sports analytics industry.     
         
   section.content
   
