--- a/views/sportsanalytics.pug
+++ b/views/sportsanalytics.pug
@@ -1,6 +1,8 @@
 extends layout
 include mixins/_navbar.pug
 include mixins/_secondmenu.pug
+block seoHeader
+  title Sports analytics jobs
 
 block content
   div.header 
@@ -8,7 +10,7 @@ block content
       +_navbar 
       div.title
         h1 <strong>Start your career in sports analytics.</strong>
-        h2 Find a jobs in the sports analytics industry.     
+        h2 Find and list jobs in the sports analytics industry.     
         
   section.content
   
