--- a/views/bicycle.pug
+++ b/views/bicycle.pug
@@ -1,14 +1,16 @@
 extends layout
 include mixins/_navbar.pug
 include mixins/_secondmenu.pug
+block seoHeader
+  title Sports analytics jobs
 
 block content
   div.header 
     div.textbox
       +_navbar 
       div.title
-        h1 <strong>Be part of the sports revolution.</strong>
-        h2 Find tech and startup jobs in sports.
+        h1 <strong>Start your career at bicycle companies.</strong>
+        h2 Find and list jobs in the bicycle industry. 
         
   section.content
   
