--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,21 +3,21 @@ html(lang='en')
   head
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no')
-    meta(name='description' content='Do you want to find jobs in Sportstech? SportekJobs is the first job board for tech and startup jobs with the focus on the sports industry. Find jobs as Sports Analyst, Web Developer, Data Scientist, Designer, Product Manager, Business Developer, Sales and Marketing Manager.')
+    meta(name='description' content='Over 11,092 jobs in the sports tech industry. Sportekjobs is the first job board for the sports tech industry. Start your career in sports and find a job as Sports Analyst, Developer, Project Manager, Sales and Marketing Expert, Data Scientist, Product Manager and more!')
     meta(property='og:url' content='https://sportekjobs.com')
     meta(property='og:type' content='website')
-    meta(property='og:title' content='A jobboard for tech and startup jobs in the sports industry to find jobs as Sports Analyst, Web Developer, Data Scientist, Designer, Product Manager, Business Developer, Sales and Marketing Manager.')
-    meta(property='og:description' content='We are building the #1 job board for the sports industry to find and post tech and startup jobs as Sports Analyst, Web Developer, Data Scientist, Designer, Product Manager, Business Developer, Sales and Marketing Manager.')
+    meta(property='og:title' content='Over 11,092 jobs in the sports tech industry. Sportekjobs is the first job board for the sports tech industry. Start your career in sports and find a job as Sports Analyst, Developer, Project Manager, Sales Expert, Data Scientist, Product Manager and more!')
+    meta(property='og:description' content='Over 11,092 jobs in the sports tech industry. Sportekjobs is the first job board for the sports tech industry. Start your career in sports and find a job as Sports Analyst, Developer, Project Manager, Sales Expert, Data Scientist, Product Manager and more!')
     meta(property='og:image' content='https://sportekjobs.com/images/smimage.png')
-    meta(name='keywords' content='sports jobs, sports internships, sports emplyoment, sports careers, sportstech jobs, startup jobs, developer jobs')
+    meta(name='keywords' content='sports jobs, sports internships, sports employment, sports analytics, sports careers, sportstech jobs, startup jobs, developer jobs')
     meta(name='twitter:card' content='summary')
     meta(name='twitter:site' content='@sportekjobs')
     meta(name='twitter:title' content='Sportekjobs')
     meta(name='twitter:creator' content='@sportekjobs')
-    meta(name='twitter:description' content='We are building the #1 job board for the sports industry to find and post tech and startup jobs as Sports Analyst, Web Developer, Data Scientist, Designer, Product Manager, Business Developer, Sales and Marketing Manager.')
+    meta(name='twitter:description' content='Over 11,092 jobs in the sports tech industry. Sportekjobs is the first job board for the sports tech industry. Start your career in sports and find a job as Sports Analyst, Developer, Project Manager, Sales Expert, Data Scientist, Product Manager and more!')
     meta(name='twitter:image:src' content='https://sportekjobs.com/images/smimage.png')
     meta(name='twitter:card' content='summary_large_image')
-    title Sportekjobs - Tech and StartUp Jobs in the Sports Industry
+    title Sportekjobs - Jobs in the Sports Tech Industry
     link(rel='stylesheet' href='/stylesheets/style.css')
     link(rel='stylesheet' href='/stylesheets/mobile.css')
     link(href='https://fonts.googleapis.com/css?family=Lato:300,400,700|Permanent+Marker' rel='stylesheet')
