--- a/views/index.pug
+++ b/views/index.pug
@@ -10,7 +10,7 @@ block content
     div.textbox
       +_navbar 
       div.title
-        h1 <strong>Find your next job in the SportsTech Industry.</strong>
+        h1 <strong>Start your career in the SportsTech Industry.</strong>
         h2 Find and list tech and startup jobs in Sports.
        
     //- div.animation
