--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,7 +17,7 @@ html(lang='en')
     meta(name='twitter:description' content='Over 11,092 jobs in the sports tech industry. Sportekjobs is the first job board for the sports tech industry. Start your career in sports and find a job as Sports Analyst, Developer, Project Manager, Sales Expert, Data Scientist, Product Manager and more!')
     meta(name='twitter:image:src' content='https://sportekjobs.com/images/smimage.png')
     meta(name='twitter:card' content='summary_large_image')
-    title Sports tech jobs - Job openings in the Sports Tech Industry
+    title Sports tech jobs: Job openings in the Sports Tech Industry
     link(rel='stylesheet' href='/stylesheets/style.css')
     link(rel='stylesheet' href='/stylesheets/mobile.css')
     link(href='https://fonts.googleapis.com/css?family=Lato:300,400,700|Permanent+Marker' rel='stylesheet')
