--- a/views/eSports.pug
+++ b/views/eSports.pug
@@ -12,8 +12,6 @@ block content
         h1 <strong>Start your career in eSports.</strong>
         h2 Find and list jobs in the eSports.        
   section.content
-  
-  
 
   section.jobpostvr
     .content
@@ -39,7 +37,7 @@ block content
                 
                 .revue-form-actions
                   input#subscribe.button(type='submit', value='Subscribe to Newsletter', name='member[subscribe]')
-    h2 Jobs in the eSports Industry
+    h2 Sports tech jobs in the eSports Industry
     each post in paid || []
       table.joblist#paidjobs
           tr
