--- a/views/fantasysports.pug
+++ b/views/fantasysports.pug
@@ -2,7 +2,7 @@ extends layout
 include mixins/_navbar.pug
 include mixins/_secondmenu.pug
 block seoHeader
-  title Sports analytics jobs
+  title Fantasy sports jobs
 
 block content
   div.header 
