--- a/views/jobInfo.pug
+++ b/views/jobInfo.pug
@@ -1,6 +1,6 @@
 extends layout
 block seoHeader
-  title Sportstech job as #{data[0].position}
+  title Sports tech job as #{data[0].position}
 
 include mixins/_navbar.pug
 include mixins/_secondmenu.pug
@@ -12,8 +12,8 @@ block content
     div.textbox
       +_navbar 
       div.title
-        h1 <strong>Be part of the sports revolution.</strong>
-        h2 Find tech and startup jobs in sports.
+        h1 <strong>Start your career at a Sports Startup.</strong>
+        h2 Find and list tech and startup jobs in Sports.
   
   section.jobinformation 
     each post in data
