--- a/views/sportshardware.pug
+++ b/views/sportshardware.pug
@@ -27,7 +27,7 @@ block content
         //-       input#subscribe.button(type='submit', value='Subscribe to our Newsletter', name='subscribe')
    
     .advertiser
-      p Hire the best tech players for your company 
+      p Hire the best tech players for your sports tech company 
       //- a(href='https://toomai.typeform.com/to/VnpRAv' target='_blank').button Post a Job
       a.typeform-share.button(href='https://toomai.typeform.com/to/VnpRAv', data-mode='drawer_right', target='_blank') Post a Job
     .newsletter-box
