--- a/views/companiesPage.pug
+++ b/views/companiesPage.pug
@@ -1,14 +1,16 @@
 extends layout
 include mixins/_navbar.pug
 include mixins/_secondmenu.pug 
+block seoHeader
+  title 100 + Sports tech start ups
 
 block content
   div.header 
     div.textbox
       +_navbar 
       div.title
-        h1 <strong>Be part of the sports revolution.</strong>
-        h2 Find tech and startup jobs in sports.
+        h1 <strong>Start your career at a Sports Startup.</strong>
+        h2 Find the best sports tech companies.
 
 
   section.companieslist
