--- a/views/sportsagency.pug
+++ b/views/sportsagency.pug
@@ -27,11 +27,11 @@ block content
         //-       input#subscribe.button(type='submit', value='Subscribe to our Newsletter', name='subscribe')
    
     .advertiser
-      p Hire the best tech players for your company 
+      p Hire the best tech players for your sports tech company 
       //- a(href='https://toomai.typeform.com/to/VnpRAv' target='_blank').button Post a Job
       a.typeform-share.button(href='https://toomai.typeform.com/to/VnpRAv', data-mode='drawer_right', target='_blank') Post a Job
     .newsletter-box
-      h1 Get a weekly email with new jobs
+      h1 Get a weekly email with new sports tech jobs
       #revue-embed
               form#revue-form(action='https://www.getrevue.co/profile/tobias-hikari/add_subscriber', method='post', name='revue-form', target='_blank')
                 .revue-form-group
