--- a/views/mixins/_secondmenu.pug
+++ b/views/mixins/_secondmenu.pug
@@ -1,6 +1,7 @@
 mixin _secondmenu
     div.box
       a.button(href='/sportsjobs-remote-jobs' active) Remote Jobs 
+      a.button(href='/locations' active) Locations
       a.button(href='/sportsjobs-internships') Internships
       a.button(href='/sports-companies') Companies
       a.button(href='/sportsjobs-collections') Collections
