--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1517,3 +1517,24 @@ td {
 .example.example1 .success .reset path {
   fill: #fff;
 }
+
+.carddetails {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5em;
+    font-weight: bold;
+    text-shadow: 0.05em 0.05em 2em transparent;
+    text-align: center;
+    padding: 1em;
+    color: white;
+}
+
+#subtitle{
+  
+  font-size: 32px;
+}
