--- a/views/fitnesssoftware.pug
+++ b/views/fitnesssoftware.pug
@@ -10,7 +10,7 @@ block content
       +_navbar 
       div.title
         h1 <strong>Start your career at a fitness software company.</strong>
-        h2 Find and list jobs at a fitness software company.        
+        h2 Find and list jobs in FitTech.        
   section.content
   
   
