--- a/views/mixins/_madeby.pug
+++ b/views/mixins/_madeby.pug
@@ -1,3 +1,3 @@
-a.madeby-a(target='_blank', href='https://twitter/toomaime')
+a.madeby-a(target='_blank', href='https://twitter.com/toomaime')
   img(src='/images/thikari.png')
   p © Thikari
